# monkey_in_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  plan.md
include/monkey/: ast.hpp  environment.hpp  evaluator.hpp  lexer.hpp  object.hpp  parser.hpp  repl.hpp  token.hpp
src/: evaluator.cpp  lexer.cpp  main.cpp  object.cpp  parser.cpp  repl.cpp
tests/: ast_test.cpp  evaluator_test.cpp  lexer_test.cpp  object_test.cpp  parser_test.cpp  performance_test.cpp  smoke_test.cpp
